<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/login"
    android:background="@drawable/foodbg">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="205dp"
        android:layout_marginEnd="38dp"
        android:layout_marginLeft="39dp"
        android:layout_marginRight="38dp"
        android:layout_marginStart="39dp"
        android:layout_marginTop="32dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/loginimg" />

    <EditText
        android:id="@+id/login_user_id_input"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="84dp"
        android:layout_marginLeft="85dp"
        android:layout_marginRight="84dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="28dp"
        android:drawableLeft="@drawable/ic_user_id"
        android:ems="10"
        android:hint="@string/userId"
        android:inputType="textPersonName"
        android:textColorHint="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/login_password_input"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="84dp"
        android:layout_marginLeft="85dp"
        android:layout_marginRight="84dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/ic_password"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_user_id_input" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="104dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="148dp"
        android:layout_marginLeft="148dp"
        android:layout_marginRight="148dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="20dp"
        android:text="@string/login_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_password_input" />

    <TextView
        android:id="@+id/login_register_btn"
        android:layout_width="160dp"
        android:layout_height="26dp"
        android:layout_marginEnd="27dp"
        android:layout_marginLeft="197dp"
        android:layout_marginRight="27dp"
        android:layout_marginStart="197dp"
        android:layout_marginTop="21dp"
        android:text="@string/register"
        android:textColor="#12FF90"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_btn" />
</android.support.constraint.ConstraintLayout>